// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenuItem Snapshots renders with defaultProps 1`] = `
<ContextMenuItem
  onClick={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;

exports[`DropdownMenuItem Snapshots renders with disabled 1`] = `
<ContextMenuItem
  disabled={true}
  onClick={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;

exports[`DropdownMenuItem Snapshots renders with index 1`] = `
<ContextMenuItem
  index="1"
  onClick={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;

exports[`DropdownMenuItem Snapshots renders with keepOpen 1`] = `
<ContextMenuItem
  onClick={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;

exports[`DropdownMenuItem Snapshots renders with multiSelect 1`] = `
<ContextMenuItem
  multiSelect={true}
  onClick={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;

exports[`DropdownMenuItem Snapshots renders with onClick 1`] = `
<ContextMenuItem
  onClick={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;

exports[`DropdownMenuItem Snapshots renders with onMouseOver 1`] = `
<ContextMenuItem
  onClick={[Function]}
  onMouseOver={[Function]}
  tabIndex="0"
>
  Test
</ContextMenuItem>
`;
